--- a/public/layout/header.html
+++ b/public/layout/header.html
@@ -6,7 +6,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Register</a></li>
+                    <li class="active"><a href="../register.html">Register</a></li>
                     <!--<li><a href="#about">About</a></li>-->
                     <!--<li><a href="#contact">Contact</a></li>-->
                     <!--<li class="dropdown">-->
