--- a/public/layout/header.html
+++ b/public/layout/header.html
@@ -2,7 +2,7 @@
     <div class="navbar navbar-fixed-top" role="navigation">
         <div class="container">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">Getd management</a>
+                <a class="navbar-brand" href="../index.html">Getd management</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
